# mcp_android

./: .gitignore  README.md  codex.mcp.toml  pyproject.toml
src/: __init__.py  config.py  errors.py  main.py
src/adb/: __init__.py  client.py  device_manager.py  logcat_service.py  screen_service.py  shell_service.py
src/app/: __init__.py  context.py  tool_registry.py
src/app/tool_handlers/: __init__.py  device_tools.py  input_tools.py  log_tools.py  screen_tools.py  system_tools.py  ui_tools.py
src/models/: device.py  tool_io.py  ui.py
src/orchestration/: __init__.py  device_session.py  executor.py  session_manager.py
src/shared/: serializers.py  temp_files.py  validators.py
src/ui/: __init__.py  hierarchy_service.py  interaction_service.py  selector_service.py  u2_client.py
tests/unit/: test_app_context.py  test_selector_service.py  test_session_manager.py  test_validators.py
